--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <i class="fas fa-plus-circle text-green-600 text-xl"></i>
                 </div>
                 <h3 class="text-sm font-semibold text-gray-900 mb-1">User Management</h3>
-                <p class="text-xs text-gray-500">Tambah stok baru</p>
+                <p class="text-xs text-gray-500">Tambah dan Edit User Petani di siKeiki-Petani</p>
             </a>
             
             <!-- <a href="#" class="menu-card bg-white rounded-xl p-4 shadow-sm flex flex-col items-center text-center hover:shadow-md">
