--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p class="text-xs text-gray-500">Melihat Stok dan Pembayaran</p>
             </a>
             
-            <a href="user-management" class="menu-card bg-white rounded-xl p-4 shadow-sm flex flex-col items-center text-center hover:shadow-md">
+            <a href="user-management.html" class="menu-card bg-white rounded-xl p-4 shadow-sm flex flex-col items-center text-center hover:shadow-md">
                 <div class="icon-wrapper w-14 h-14 bg-green-100 rounded-full flex items-center justify-center mb-3">
                     <i class="fas fa-plus-circle text-green-600 text-xl"></i>
                 </div>
