--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
     </style>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col" onload="document.body.classList.add('loaded')">
-    <header class="bg-green-600 py-5 text-center shadow-md">
+    <header class="bg-indigo-600 py-5 text-center shadow-md">
         <div class="flex items-center justify-center space-x-3 px-4">
             <div class="w-12 h-12 bg-white rounded-lg flex items-center justify-center shadow-md">
                 <img src="https://isitaman.github.io/sikeiki-admin/favicon-96x96.png"></img>
             </div>
             <div>
                 <h1 class="text-xl md:text-2xl font-bold text-white">siKeiki Admin</h1>
-                <p class="text-xs md:text-sm text-green-100">Sistem Informasi Kemitraan</p>
-                <p class="text-xs md:text-sm text-green-100">Ekosistem Industri Anggrek Javina</p>
+                <p class="text-xs md:text-sm text-indigo-100">Sistem Informasi Kemitraan</p>
+                <p class="text-xs md:text-sm text-indigo-100">Ekosistem Industri Anggrek Javina</p>
             </div>
         </div>
     </header>
@@ -96,8 +96,8 @@
             </a>
             
             <a href="user-management.html" class="menu-card bg-white rounded-xl p-4 shadow-sm flex flex-col items-center text-center hover:shadow-md">
-                <div class="icon-wrapper w-14 h-14 bg-green-100 rounded-full flex items-center justify-center mb-3">
-                    <i class="fas fa-plus-circle text-green-600 text-xl"></i>
+                <div class="icon-wrapper w-14 h-14 bg-indigo-100 rounded-full flex items-center justify-center mb-3">
+                    <i class="fas fa-plus-circle text-indigo-600 text-xl"></i>
                 </div>
                 <h3 class="text-sm font-semibold text-gray-900 mb-1">User Management</h3>
                 <p class="text-xs text-gray-500">Tambah dan Edit User Petani di siKeiki-Petani</p>
