--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <!-- Web App Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="application-name" content="siKeiki">
+    <meta name="application-name" content="siKeiki Admin">
     <meta name="apple-mobile-web-app-title" content="siKeiki Admin">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Sistem Informasi Kelola Ekosistem Industri Kemitraan Anggrek Javina">
